# axum-tutorial

./: Cargo.toml  README.md
src/: context.rs  error.rs  extractor.rs  main.rs  model.rs  state.rs  test_fixture.rs
src/auth/: extractor.rs  jwt.rs  middleware.rs  mod.rs
src/routes/: login.rs  mod.rs  routes_login.rs  test_fixture.rs  tickets.rs
src/web/: auth.rs  mod.rs  routes_login.rs  routes_tickets.rs  test_fixture.rs
src/web/auth/: extractor.rs  jwt.rs  mod.rs
